# Robotics

./: .gitmodules  temp.txt
Blink/: Blink.ino
BuildMyWorld/: CMakeLists.txt
BuildMyWorld/model/HumanoidRobot/: model.sdf
BuildMyWorld/models/Building/: model.sdf
BuildMyWorld/models/HumanoidRobot/: model.config
BuildMyWorld/scripts/: welcome_message.cpp
BuildMyWorld/world/: UdacityOffice
FirstRobot/: CMakeLists.txt
FirstRobot/model/Robot/: model.config  model.sdf
FirstRobot/model/wall/: model.sdf
FirstRobot/script/: hello.cpp
FirstRobot/world/: amr  myWorld
GoChaseIt_ws/: frames.gv
GoChaseIt_ws/devel/: .catkin  _setup_util.py
GoChaseIt_ws/devel/include/ball_chaser/: DriveToTarget.h  DriveToTargetRequest.h  (+1 more)
GoChaseIt_ws/src/ball_chaser/: CMakeLists.txt
WiFi_robot/: ARDUINO_GUI.ipynb  WiFi_robot.ino  wifi_test.py
WiFi_robot/imu.ino/: imu.ino.ino
catkin_ws/devel/: .catkin  setup.sh
catkin_ws/src/first_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/simple_arm/: CMakeLists.txt
my_ball_model/: model.config  model.sdf
ros_developers_live_class_51/: .bash_aliases  .bash_history  .bashrc  .catkin_ws_python3  .gitconfig  .py3venv  odom_config.rviz
ros_developers_live_class_51/.rviz/: persistent_settings
ros_developers_live_class_51/notebook_ws/.ipynb_checkpoints/: Course_RobotLocalization_Unit1-checkpoint.ipynb  live-class-51-checkpoint.ipynb
ros_developers_live_class_51/simulation_ws/devel/: setup.sh
simpleMoveCode/: simpleMoveCode.ino
turtlebot/devel/: .catkin  .rosinstall  local_setup.sh
turtlebot/src/: EKFlab.rviz
(+461 files in other folders)
